// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CodeManagementPageWrapper renders renders empty results correctly 1`] = `
Array [
  <div
    className="hero py-4 pt-md-5 pb-md-0"
  >
    <div
      className="container-fluid"
    >
      <div
        className="row"
      >
        <div
          className="col-12 col-md-9 mb-2 mb-md-1"
        >
          <h1
            className={null}
          >
            Code Management
          </h1>
        </div>
        <div
          className="col-12 col-md-3 text-md-right mb-2 mb-md-1"
        >
          <img
            alt="edX for Business"
            src="test-file-stub"
          />
        </div>
      </div>
    </div>
  </div>,
  <div
    className="container-fluid"
  >
    <div
      className="row mt-4 mb-3"
    >
      <div
        className="col-12 col-md-3 mb-2 mb-md-0"
      >
        <h2
          className={null}
        >
          Overview
        </h2>
      </div>
      <div
        className="col-12 col-md-9 mb-2 mb-md-0 text-md-right"
      >
        <button
          className="btn mr-2 btn-link"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onKeyDown={[Function]}
          type="button"
        >
          <span
            aria-hidden={true}
            className="fa fa-refresh mr-2"
            id="Icon1"
          />
          Refresh data
        </button>
        <a
          className="request-codes-btn btn btn-primary"
          href="/test-page/request"
          onClick={[Function]}
        >
          <span
            aria-hidden={true}
            className="fa fa-plus mr-2"
            id="Icon1"
          />
          Request more codes
        </a>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col"
      >
        <div
          className="alert fade alert-warning show"
          hidden={false}
          role="alert"
        >
          <div
            className="alert-dialog"
          >
            <div
              className="d-flex"
            >
              <div
                className="icon mr-2"
              >
                <span
                  aria-hidden={true}
                  className="fa fa-exclamation-circle"
                  id="Icon1"
                />
              </div>
              <div
                className="message"
              >
                There are no results.
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`CodeManagementPageWrapper renders renders error state correctly 1`] = `
Array [
  <div
    className="hero py-4 pt-md-5 pb-md-0"
  >
    <div
      className="container-fluid"
    >
      <div
        className="row"
      >
        <div
          className="col-12 col-md-9 mb-2 mb-md-1"
        >
          <h1
            className={null}
          >
            Code Management
          </h1>
        </div>
        <div
          className="col-12 col-md-3 text-md-right mb-2 mb-md-1"
        >
          <img
            alt="edX for Business"
            src="test-file-stub"
          />
        </div>
      </div>
    </div>
  </div>,
  <div
    className="container-fluid"
  >
    <div
      className="row mt-4 mb-3"
    >
      <div
        className="col-12 col-md-3 mb-2 mb-md-0"
      >
        <h2
          className={null}
        >
          Overview
        </h2>
      </div>
      <div
        className="col-12 col-md-9 mb-2 mb-md-0 text-md-right"
      >
        <button
          className="btn mr-2 btn-link"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onKeyDown={[Function]}
          type="button"
        >
          <span
            aria-hidden={true}
            className="fa fa-refresh mr-2"
            id="Icon1"
          />
          Refresh data
        </button>
        <a
          className="request-codes-btn btn btn-primary"
          href="/test-page/request"
          onClick={[Function]}
        >
          <span
            aria-hidden={true}
            className="fa fa-plus mr-2"
            id="Icon1"
          />
          Request more codes
        </a>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col"
      >
        <div
          className="mt-3 alert fade alert-danger show"
          hidden={false}
          role="alert"
        >
          <div
            className="alert-dialog"
          >
            <div
              className="d-flex"
            >
              <div
                className="icon mr-2"
              >
                <span
                  aria-hidden={true}
                  className="fa fa-times-circle"
                  id="Icon1"
                />
              </div>
              <div
                className="message"
              >
                <span
                  className="title"
                >
                  Unable to load coupons
                </span>
                Try refreshing your screen (test error)
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`CodeManagementPageWrapper renders renders loading state correctly 1`] = `
Array [
  <div
    className="hero py-4 pt-md-5 pb-md-0"
  >
    <div
      className="container-fluid"
    >
      <div
        className="row"
      >
        <div
          className="col-12 col-md-9 mb-2 mb-md-1"
        >
          <h1
            className={null}
          >
            Code Management
          </h1>
        </div>
        <div
          className="col-12 col-md-3 text-md-right mb-2 mb-md-1"
        >
          <img
            alt="edX for Business"
            src="test-file-stub"
          />
        </div>
      </div>
    </div>
  </div>,
  <div
    className="container-fluid"
  >
    <div
      className="row mt-4 mb-3"
    >
      <div
        className="col-12 col-md-3 mb-2 mb-md-0"
      >
        <h2
          className={null}
        >
          Overview
        </h2>
      </div>
      <div
        className="col-12 col-md-9 mb-2 mb-md-0 text-md-right"
      >
        <button
          className="btn mr-2 btn-link"
          disabled={true}
          onBlur={[Function]}
          onClick={[Function]}
          onKeyDown={[Function]}
          type="button"
        >
          <span
            aria-hidden={true}
            className="fa fa-refresh mr-2"
            id="Icon1"
          />
          Refresh data
        </button>
        <a
          className="request-codes-btn btn btn-primary"
          href="/test-page/request"
          onClick={[Function]}
        >
          <span
            aria-hidden={true}
            className="fa fa-plus mr-2"
            id="Icon1"
          />
          Request more codes
        </a>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col"
      >
        <div
          className="loading d-flex align-items-center justify-content-center coupons mt-3"
        >
          Loading...
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`CodeManagementPageWrapper renders renders non-empty results correctly 1`] = `
Array [
  <div
    className="hero py-4 pt-md-5 pb-md-0"
  >
    <div
      className="container-fluid"
    >
      <div
        className="row"
      >
        <div
          className="col-12 col-md-9 mb-2 mb-md-1"
        >
          <h1
            className={null}
          >
            Code Management
          </h1>
        </div>
        <div
          className="col-12 col-md-3 text-md-right mb-2 mb-md-1"
        >
          <img
            alt="edX for Business"
            src="test-file-stub"
          />
        </div>
      </div>
    </div>
  </div>,
  <div
    className="container-fluid"
  >
    <div
      className="row mt-4 mb-3"
    >
      <div
        className="col-12 col-md-3 mb-2 mb-md-0"
      >
        <h2
          className={null}
        >
          Overview
        </h2>
      </div>
      <div
        className="col-12 col-md-9 mb-2 mb-md-0 text-md-right"
      >
        <button
          className="btn mr-2 btn-link"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onKeyDown={[Function]}
          type="button"
        >
          <span
            aria-hidden={true}
            className="fa fa-refresh mr-2"
            id="Icon1"
          />
          Refresh data
        </button>
        <a
          className="request-codes-btn btn btn-primary"
          href="/test-page/request"
          onClick={[Function]}
        >
          <span
            aria-hidden={true}
            className="fa fa-plus mr-2"
            id="Icon1"
          />
          Request more codes
        </a>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col"
      >
        <div
          className="coupon mb-3 mb-lg-2 rounded border"
        >
          <div
            aria-controls="coupon-details-0"
            aria-expanded={false}
            className="metadata row no-gutters p-2 d-flex align-items-center rounded"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex="0"
          >
            <div
              className="col-sm-12 col-lg-3 mb-2 mb-lg-0"
            >
              <small
                className="text-muted"
              >
                Coupon Name
              </small>
              <div>
                test-title-1
              </div>
            </div>
            <div
              className="col-sm-12 col-lg-4 mb-2 mb-lg-0"
            >
              <div
                className="row no-gutters"
              >
                <div
                  className="col"
                >
                  <small
                    className="text-muted"
                  >
                    Valid From
                  </small>
                  <div>
                    January 3, 2019
                  </div>
                </div>
                <div
                  className="col"
                >
                  <small
                    className="text-muted"
                  >
                    Valid To
                  </small>
                  <div>
                    September 18, 2019
                  </div>
                </div>
              </div>
            </div>
            <div
              className="col-sm-12 col-lg-4 mb-2 mb-lg-0"
            >
              <div
                className="row no-gutters"
              >
                <div
                  className="col"
                >
                  <small
                    className="text-muted"
                  >
                    Unassigned Codes
                  </small>
                  <div>
                    2
                  </div>
                </div>
                <div
                  className="col"
                >
                  <small
                    className="text-muted"
                  >
                    Enrollments Redeemed
                  </small>
                  <div>
                    2 of 10
                    <span
                      className="ml-1"
                    >
                      (20%)
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="icons col-lg-1 order-first order-lg-last text-right pr-2 mt-1 m-lg-0"
            >
              <span
                aria-hidden={true}
                className="fa fa-chevron-down text-primary"
                id="Icon1"
              />
              <span
                className="sr-only"
              >
                Open coupon details
              </span>
            </div>
          </div>
          <div
            className="coupon-details row no-gutters px-2 my-3 d-none"
            id="coupon-details-0"
          >
            <div
              className="col"
            />
          </div>
        </div>
        <div
          className="coupon mb-3 mb-lg-2 rounded border"
        >
          <div
            aria-controls="coupon-details-1"
            aria-expanded={false}
            className="metadata row no-gutters p-2 d-flex align-items-center rounded"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex="0"
          >
            <div
              className="col-sm-12 col-lg-3 mb-2 mb-lg-0"
            >
              <small
                className="text-muted"
              >
                Coupon Name
              </small>
              <div>
                test-title-2
              </div>
            </div>
            <div
              className="col-sm-12 col-lg-4 mb-2 mb-lg-0"
            >
              <div
                className="row no-gutters"
              >
                <div
                  className="col"
                >
                  <small
                    className="text-muted"
                  >
                    Valid From
                  </small>
                  <div>
                    January 3, 2019
                  </div>
                </div>
                <div
                  className="col"
                >
                  <small
                    className="text-muted"
                  >
                    Valid To
                  </small>
                  <div>
                    September 18, 2019
                  </div>
                </div>
              </div>
            </div>
            <div
              className="col-sm-12 col-lg-4 mb-2 mb-lg-0"
            >
              <div
                className="row no-gutters"
              >
                <div
                  className="col"
                >
                  <small
                    className="text-muted"
                  >
                    Unassigned Codes
                  </small>
                  <div>
                    2
                  </div>
                </div>
                <div
                  className="col"
                >
                  <small
                    className="text-muted"
                  >
                    Enrollments Redeemed
                  </small>
                  <div>
                    2 of 10
                    <span
                      className="ml-1"
                    >
                      (20%)
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="icons col-lg-1 order-first order-lg-last text-right pr-2 mt-1 m-lg-0"
            >
              <span
                aria-hidden={true}
                className="fa fa-chevron-down text-primary"
                id="Icon1"
              />
              <span
                className="sr-only"
              >
                Open coupon details
              </span>
            </div>
          </div>
          <div
            className="coupon-details row no-gutters px-2 my-3 d-none"
            id="coupon-details-1"
          >
            <div
              className="col"
            />
          </div>
        </div>
        <div
          className="d-flex mt-4 justify-content-center"
        >
          <nav
            aria-label="coupons pagination"
            className=""
          >
            <div
              aria-atomic={true}
              aria-live="polite"
              aria-relevant="text"
              className="sr-only"
            >
              Page 1, Current Page, of 1
            </div>
            <ul
              className="pagination"
            >
              <li
                className="page-item disabled"
              >
                <button
                  aria-label="Previous"
                  className="btn previous page-link"
                  disabled={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  tabIndex="-1"
                  type="button"
                >
                  <div>
                    <span
                      aria-hidden={true}
                      className="fa fa-chevron-left mr-2"
                      id="pagination-3"
                    />
                    Previous
                  </div>
                </button>
              </li>
              <li
                className="page-item disabled"
              >
                <button
                  aria-label="Next"
                  className="btn next page-link"
                  disabled={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  tabIndex="-1"
                  type="button"
                >
                  <div>
                    Next
                    <span
                      aria-hidden={true}
                      className="fa fa-chevron-right ml-2"
                      id="pagination-4"
                    />
                  </div>
                </button>
              </li>
            </ul>
          </nav>
        </div>
      </div>
    </div>
  </div>,
]
`;
